# libtvb

./: .gitignore  .gitmodules  .travis.yml  .vimrc  .ycm_extra_conf.py  AUTHORS.md  CMakeLists.txt  DEVELOP.md  Doxyfile  LICENSE  Makefile  README.md  README_8md.html  README_8md_source.html  TESTING.md  TODO.md  annotated.html  annotated.js  bench_net_exc.html  bench_net_exc.html.mem  bench_net_exc.js  build.bat  classes.html  collect_tests.sh  conn_8c.html  conn_8c.js  conn_8c_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen.css  fig_exc_em_heun.gpi  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  (+255 more)
bench/: CMakeLists.txt  bench_net_exc.c  bench_prng.c  bench_randn_axpy_nnz.c  bench_vmb.c  tract_lengths.c
dev/: __init__.py  __main__.py  build.py  cmd.py  gh_pages.py
doc/: C.md  Code-generation.md  Developing.md  Docs.md  Emscripten.md  Hardware.md  High-level-overview.md  Home.md  README.md  SDDE.md  Testing.md
fig/: bench_net_exc.py  exc_em_emcolor_heun.gpi
include/: history.h  output.h  prelude.h  randomkit.h  rng.h  sch_base.h  sch_base_fields.h  sddekit.h  sddekit_api.h  sk_config.h  sk_config.h.in  sk_dat.h  sk_err.h  sk_hist.h  sk_log.h  sk_malloc.h  sk_net.h  sk_out.h  sk_scheme.h  sk_solv.h  sk_sparse.h  sk_sys.h  sk_test.h  sk_util.h  sys_exc.h  sys_gen2d.h  sys_gen2d_pars.h  sys_hmje.h  sys_hmje_pars.h  sys_rww.h  template.h
lib/test/: CMakeLists.txt  main.c  test.h  test_all.c.py  test_arith.c  test_dat.c  test_exc.c  test_hist.c  test_hrf.c  test_list.h  test_log.c  test_malloc.c  test_net.c  test_net2.c  test_out.c  test_solv.c  test_sparse.c  test_util.c  utils.c
matlab/: README.md  example.m  rk_state.m  sd_ptr.m  sddekit.h  sk_hist.m  sk_mex_compile.m  sk_obj_meth.m  sk_ptr.m  sk_sch_em.m  sk_solv.m  sk_tests.m
mex/: README.md  foo.m  manip.m
python/: README.md  _sddekit.js  _sddekit.py  _sddekit3.py  dumpif.py  hfill.pyx  hist.pyx  makefile  net.pxd  net.pyx  rng.pyx  run_ctypesgen.py  sdct.py  sddekit.pxd  sddekit.py  sddekit.pyx  sddekit_h.pxd  setup.py  sys.pyx  system.pxd  system.pyx  tests.py  util.pxd  util.pyx
pyx/: lib.c  lib.h  pylib.pyx  sddekit.pyx  setup.py  test.py
search/: all_0.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  (+68 more)
src/: CMakeLists.txt  api.py  arith.c  blas.f  blas.f.c  conn.c  conv_kern.c  dump.py  expokit.f  expokit.f.c  gen2d.c  gen2d.h  hfill_if.c  hist.c  hist_linterp.c  history.c  hmje.c  hmje.h  hrfs.c  lapack.f  lapack.f.c  log_fun.c  malloc.c  out_cb.c  out_conv.c  out_file.c  out_ign.c  out_linop.c  out_mem.c  out_sfilt.c  out_tavg.c  out_tee.c  out_until.c  prelude.h  randomkit.c  rng.c  rng_if.c  rww.c  rww.h  sch_cb.c  (+48 more)
src/conn/: cfun.cpp  conn.c
src/parallel/: iuncl.c  iuncl.h  ranluxcl.cl  ranluxcl_kernels.cl
src/sch/: heun.c  one_step.c
src/sys/: cb.c  hmje.c
src/util/: malloc.c  util.c  ver.c
test/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  alltests.c  collect_tests.sh  main.c  test.h  test_all.c.py  test_arith.c  test_dat.c  test_dat.cpp  test_err.c  test_exc.c  test_exc.cpp  test_hist.c  test_hist.cpp  test_hrf.c  test_list.h  test_log.c  test_main.c  test_malloc.c  test_net.c  test_net.cpp  test_out.c  test_out.cpp  test_prng.c  test_solv.c  test_solv.cpp  test_sparse.c  test_sparse.cpp  test_util.c  test_util.cpp
(+112 files in other folders)
